--- a/src/App.xaml
+++ b/src/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="WPF.Core.App"
+﻿<Application x:Class="AnnotationControl.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPF.Core"
